--- a/templates/image.html
+++ b/templates/image.html
@@ -1,7 +1,7 @@
 <h3>Upload an image</h3>
 
 <form method="post" enctype="multipart/form-data">
-    <input type="file" name="file">
+    <input type="file" name="file" accept="image/jpeg,image/jpg,image/png">
     
     <br/>
 
