--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,27 @@
-<h3>Upload an image</h3>
-
+<head>
+<style>
+body {background-color: powderblue;}
+h1   {background-color:black; color: white;}
+h3    {background-color: gainsboro; color: blue;}
+form { 
+margin: 0 auto; 
+width:250px;
+}
+.borderHead {
+ border-width:3px;
+ border-style:solid;
+ border-color:#FF0000;
+}
+</style>
+</head>
+<body>
+<h1 class="borderHead"><center>Welcome to MyPortugueseTile!<center></h1>
+<h3><center>MyPortugueseTile is a simple service designed to convert any image into a traditional portuguese-style tile mural.<br>(For those who are unaware, this means a tile mural using a blue-tan color scheme with a pencil sketch-like style.)<br>You can upload any image in jpeg, jpg, or png format, and your output will be returned as a jpeg file.<br>This is a free service and we hope you enjoy!<br>Documentation and the process used to convert the image can be found here: https://github.com/WillBolduc05/imageToPencilSketch</center></h3>
 <form method="post" enctype="multipart/form-data">
-    <input type="file" name="file" accept="image/jpeg,image/jpg,image/png">
+    <input align="center" type="file" name="file" accept="image/jpeg,image/jpg,image/png">
     
     <br/>
 
-    <input type="submit" value="Upload">
+    <input align="center" type="submit" value="Upload">
 </form>
+</body>
